--- a/style.css
+++ b/style.css
@@ -2,30 +2,24 @@ body {
   background-color: #010165;
   margin: 0px;
 }
-
-#door1{
-  cursor:pointer ;
+.header{
+ background-color: #00ffff;
+ text-align:center;
 }
-
-.header { 
-  background-color: #00ffff;
-  text-align: center
-}
-
 .title-row{
-margin-top:42px;
-margin-bottom:21px;
-text-align:center;
+ margin-top:42px;
+ margin-bottom:21px;
+ text-align:center;
 }
 .instructions-title{
-display:inline;
-font-size:18px;
-color:#00ffff;
-font-family:‘Work Sans’;
+ display:inline;
+ font-size:18px;
+ color:#00ffff;
+ font-family:‘Work Sans’;
 }
 .instructions-row{
-margin:0 auto;
-width:400px;
+ margin:0 auto
+ width:400px
 }
 .instructions-number{
 padding-right:25px;
@@ -34,21 +28,20 @@ font-size:36px;
 color:#00ffff;
 }
 .instructions-text{
-padding:10px;
-font-family:‘Work Sans’;
-font-size:14px;
-color:#ffffff;
+ padding:10px;
+ font-family:‘Work Sans’;
+ font-size:14px;
+ color:#ffffff;
 }
 .door-row{
-text-align:center;
+  text-align: center;
 }
 
-.door-frame{ 
-  cursor:pointer; 
-  padding:10px;
+.door-frame{
+ cursor:pointer;
+ padding:10px;
 }
-
-#start-row{
+.start-row{
 margin:auto;
 width:120px;
 height:43px;
@@ -61,4 +54,3 @@ color:#010165;
 margin-bottom:21px;
 cursor:pointer;
 }
-
