--- a/style.css
+++ b/style.css
@@ -3,62 +3,89 @@ body {
   margin: 0px;
 }
 
-#door1{
-  cursor:pointer ;
-}
-
-.header { 
+.header {
   background-color: #00ffff;
-  text-align: center
+  text-align: center;
 }
 
-.title-row{
-margin-top:42px;
-margin-bottom:21px;
-text-align:center;
-}
-.instructions-title{
-display:inline;
-font-size:18px;
-color:#00ffff;
-font-family:‘Work Sans’;
-}
-.instructions-row{
-margin:0 auto;
-width:400px;
-}
-.instructions-number{
-padding-right:25px;
-font-family:‘Work Sans’;
-font-size:36px;
-color:#00ffff;
-}
-.instructions-text{
-padding:10px;
-font-family:‘Work Sans’;
-font-size:14px;
-color:#ffffff;
-}
-.door-row{
-text-align:center;
+.first-row {
+  margin-top: 42px;
+  text-align: center;
+  margin-bottom: 21px;
 }
 
-.door-frame{ 
-  cursor:pointer; 
-  padding:10px;
+.instructions-title {
+  display: inline;
+  font-family: 'Work Sans';
+  font-size: 18px;
+  color: #00ffff;
 }
 
-#start-row{
-margin:auto;
-width:120px;
-height:43px;
-font-family:‘Work Sans’;
-background-color:#eb6536;
-padding-top:18px;
-font-size:18px;
-text-align:center;
-color:#010165;
-margin-bottom:21px;
-cursor:pointer;
+.second-row {
+  margin: 0 auto;
+  width: 400px;
 }
 
+.instructions-number {
+  padding-right: 25px;
+  font-family: 'Work Sans';
+  font-size: 36px;
+  color: #00ffff;
+}
+
+.instructions-text {
+  padding: 10px;
+  font-family: 'Work Sans';
+  font-size: 14px;
+  color: #ffffff;
+}
+
+.door-row {
+  text-align: center;
+}
+
+.door-frame {
+  cursor: pointer;
+  padding: 10px;
+}
+
+.start-row {
+  margin: auto;
+  width: 120px;
+  height: 43px;
+  background-color: #eb6536;
+  padding-top: 18px;
+  font-family: 'Work Sans';
+  font-size: 18px;
+  text-align: center;
+  color: #010165;
+  margin-bottom: 9px;
+  cursor: pointer;
+}
+
+.score-row {
+  text-align: center;
+  width: 100%;
+}
+
+.score-text {
+  margin-right: 17px;
+  padding: 5px;
+  display: inline;
+  font-family: 'Work Sans';
+  font-size: 12px;
+  letter-spacing: 1.1px;
+  color: #ffffff;
+}
+
+.score-box {
+  margin-top: 9px;
+  display: inline-block;
+  padding: 8px;
+  margin: 18px;
+  margin-right: 29px;
+  width: 59px;
+  background-color: #00ffff;
+  font-family: 'Work Sans';
+  font-size: 45px;
+}
